# Programacion-Concurrente-en-C

./: CMakeLists.txt  Clase2.c  HelloWorld.c  README.md
p1-24/: CMakeLists.txt
p1-24/ssoo_p1_initial_code/: CMakeLists.txt  autores.txt  combine  combine.c  crear.c  estadisticas.csv  lectordat  out
p1-24/ssoo_p1_probador/: lectordat.c  probador-ssoo-p1.py
p2-25/: CMakeLists.txt  autores.txt  comandos.txt  fich.txt  mygrep  mygrep.c  scripter.c  text.txt
p2-25/ssoo_p2_tester/: tester.sh
p2_25/: Makefile  mygrep.c
p3-25/: CMakeLists.txt  autores.txt  factory_manager.c  in.txt  manager.h  process_manager.c  queue.c  queue.h  test.c
